// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Controls/masterDetail:Base MasterDetail рендер с установкой masterPosition 1`] = `
<div>
  <div
    class="
                controls-MasterDetail controls-MasterDetail_masterPosition-right
                
                ws-flexbox controls_list_theme-undefined
                
                undefined
              "
  >
    <div
      class="
                        controls-MasterDetail_master undefined
                        controls-MasterDetail_master-contrast controls-MasterDetail_master_width
                      "
      style="width: 27%; max-width: 50%; min-width: 30px;"
    >
      <div />
    </div>
    <div
      class="
                            controls-MasterDetail_details
                            controls-MasterDetail_details-contrast
                            ws-flexbox ws-flex-grow-1 
                          "
    >
      <div />
    </div>
    <div
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Controls/masterDetail:Base MasterDetail рендер с установкой masterPosition 2`] = `
<div>
  <div
    class="
                controls-MasterDetail controls-MasterDetail_masterPosition-right
                
                ws-flexbox controls_list_theme-undefined
                
                undefined
              "
  >
    <div
      class="
                        controls-MasterDetail_master undefined
                        controls-MasterDetail_master-contrast controls-MasterDetail_master_width
                      "
      style="width: 27%; max-width: 50%; min-width: 30px;"
    >
      <div />
    </div>
    <div
      class="
                            controls-MasterDetail_details
                            controls-MasterDetail_details-contrast
                            ws-flexbox ws-flex-grow-1 
                          "
    >
      <div />
    </div>
    <div
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Controls/masterDetail:Base MasterDetail рендер с установкой masterVisibility 1`] = `
<div>
  <div
    class="
                controls-MasterDetail controls-MasterDetail_masterPosition-left
                
                ws-flexbox controls_list_theme-undefined
                
                undefined
              "
  >
    <div
      class="
                            controls-MasterDetail_details
                            controls-MasterDetail_details-contrast
                            ws-flexbox ws-flex-grow-1 
                          "
    >
      <div />
    </div>
    <div
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Controls/masterDetail:Base MasterDetail рендер с установкой макс/мин ширины (base) 1`] = `
<div>
  <div
    class="
                controls-MasterDetail controls-MasterDetail_masterPosition-left
                
                ws-flexbox controls_list_theme-undefined
                
                undefined
              "
  >
    <div
      class="
                        controls-MasterDetail_master undefined
                        controls-MasterDetail_master-contrast controls-MasterDetail_master_width
                      "
      style="width: 200px; max-width: 299px; min-width: 100px;"
    >
      <div />
    </div>
    <div
      class="
                            controls-MasterDetail_details
                            controls-MasterDetail_details-contrast
                            ws-flexbox ws-flex-grow-1 
                          "
    >
      <div />
    </div>
    <div
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Controls/masterDetail:Base MasterDetail рендер с установкой макс/мин ширины (wrong maxWidth) 1`] = `
<div>
  <div
    class="
                controls-MasterDetail controls-MasterDetail_masterPosition-left
                
                ws-flexbox controls_list_theme-undefined
                
                undefined
              "
  >
    <div
      class="
                        controls-MasterDetail_master undefined
                        controls-MasterDetail_master-contrast controls-MasterDetail_master_width
                      "
      style="width: 200px; max-width: 150px; min-width: 100px;"
    >
      <div />
    </div>
    <div
      class="
                            controls-MasterDetail_details
                            controls-MasterDetail_details-contrast
                            ws-flexbox ws-flex-grow-1 
                          "
    >
      <div />
    </div>
    <div
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Controls/masterDetail:Base MasterDetail рендер с установкой макс/мин ширины (wrong minWidth) 1`] = `
<div>
  <div
    class="
                controls-MasterDetail controls-MasterDetail_masterPosition-left
                
                ws-flexbox controls_list_theme-undefined
                
                undefined
              "
  >
    <div
      class="
                        controls-MasterDetail_master undefined
                        controls-MasterDetail_master-contrast controls-MasterDetail_master_width
                      "
      style="width: 200px; max-width: 299px; min-width: 250px;"
    >
      <div />
    </div>
    <div
      class="
                            controls-MasterDetail_details
                            controls-MasterDetail_details-contrast
                            ws-flexbox ws-flex-grow-1 
                          "
    >
      <div />
    </div>
    <div
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Controls/masterDetail:Base MasterDetail рендер с установкой ширины + propStorageId 1`] = `
<div>
  <div
    class="
                controls-MasterDetail controls-MasterDetail_masterPosition-left
                
                ws-flexbox controls_list_theme-undefined
                
                undefined
              "
  >
    <div
      class="
                        controls-MasterDetail_master undefined
                        controls-MasterDetail_master-contrast controls-MasterDetail_master_width
                      "
      style="width: 200px; max-width: 299px; min-width: 100px;"
    >
      <div />
    </div>
    <div
      class="
                        controls-MasterDetail_resizing-line_wrapper
                        controls-MasterDetail_resizingLine_masterPosition-left
                    "
    >
      <div
        class="controls-ResizingLine controls_dragnDrop_theme-default controls-MasterDetail_resizing-line
                            controls-MasterDetail_resizing-line_position-left"
        data-qa="controls-MasterDetail_resizing-line"
        tabindex="0"
      >
        <div
          class="controls-ResizingLine__wrapper"
        >
          <div
            class="controls-ResizingLine__areaWrapper controls-ResizingLine__areaWrapper_horizontal controls-ResizingLine__areaWrapper_horizontal_direction-direct"
          />
          <div
            class="controls-ResizingLine__border controls-ResizingLine__border_horizontal"
            tabindex="0"
          />
        </div>
      </div>
    </div>
    <div
      class="
                            controls-MasterDetail_details
                            controls-MasterDetail_details-contrast
                            ws-flexbox ws-flex-grow-1 
                          "
    >
      <div />
    </div>
    <div
      tabindex="0"
    />
  </div>
</div>
`;
